# HPP

./: .gitignore  CMakeLists.txt  README.md  runmp.sh  wbSolution.cpp
data/: common.markdown
data/0/: description.markdown
data/11/: description.markdown
data/11/data/0/: CDF.raw  histogram.raw
data/6/: description.markdown
data/7/data/0/: result.raw
data/7/data/1/: result.raw
data/7/data/2/: result.raw
data/7/data/3/: result.raw
data/7/data/4/: result.raw
data/7/data/5/: result.raw
data/7/data/6/: result.raw
data/7/data/7/: result.raw
data/7/data/8/: result.raw
data/7/data/9/: result.raw
data/MP1/: description.markdown
data/help/: description.markdown
skel/: mp0.cu  mp1.cu  mp11.cu  mp12.cu  mp2.cu  mp3.cu  mp4.cu  mp5.cu  mp6.cu  mp7.cpp  mp8.cpp  mp9.cpp
